add model using open api generator, enabled decrypt function for several algortims
